# MatrixV

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  instruction.md
backend/: Dockerfile  pyproject.toml
backend/agents/audio_artist/: agent.py  audio_processor.py  tts_engine.py
backend/agents/script_editor/: agent.py  prompts.py  sensitive_filter.py
backend/agents/trend_catcher/: agent.py  filter.py
backend/agents/video_editor/: agent.py  subtitle_generator.py  timeline_builder.py
backend/agents/visual_director/: agent.py  pexels_client.py  prompts.py
backend/api/: main.py
backend/config/: celery_app.py  settings.py
backend/models/: database.py  schema.py
backend/scraper/: browser_pool.py
backend/tasks/: video_pipeline.py
backend/utils/: llm_client.py  minio_client.py
backend/video_engine/: ffmpeg_wrapper.py
frontend/: Dockerfile  package.json
frontend/src/: App.tsx
frontend/src/hooks/: useTaskStatus.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  TaskList.tsx
infra/: docker-compose.yml
